syntax = "proto3";

package customer;

option java_package = "br.com.mj";
option java_multiple_files = true;

message CustomerMessage {
  string name = 1;
  string email = 2;
  string password = 3;
}

message CustomerRequest {
  CustomerMessage customer = 1;
}

message CustomerResponse {
  string result = 1;
}

service CustomerService {
  rpc Save(CustomerRequest) returns (CustomerResponse) {};
}